# rustfuck

./: Cargo.toml  README.md
asm/: compile.sh  hello.S
brainfucks/: h.bf  hello_world.bf  looploop.bf  plus_one.bf  sum.bf
resources/asm/: add.S  end.S  getchar.S  left.S  putchar.S  right.S  start.S  subtract.S
resources/c/: add.c  getchar.c  left.c  loop.c  putchar.c  right.c  start.c  subtract.c
resources/man/: rustfuck.1
src/: ast.rs  cli.rs  codegen.rs  lexer.rs  main.rs  parser.rs  test
src/codegen/: asm.rs  c.rs  mod.rs
