[package]
name = "rustfuck"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }

[build-dependencies]
clap = { version = "4.2.1", features = ["derive"] }
clap_mangen = "0.2.10"
project-root = "0.2.2"
